Bug 230140 - Print dialog no longer shown - Unable to select printer
Summary: Print dialog no longer shown - Unable to select printer
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-03-09 22:47 UTC by Thomas McGuire
Modified: 2010-05-07 15:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-03-09 22:47:37 UTC
The message viewer shows only the Qt print preview dialog, whereas it used to show the KDE print dialog.

No it is not possible to select the printer anymore.
Comment 1 Tobias Koenig 2010-05-07 15:09:24 UTC
SVN commit 1123957 by tokoe:

Use QPrintDialog directly to be consitent with all the
other KDE-PIM applications

BUG: 230140


 M  +9 -5      viewer_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123957