Use QPrintDialog directly to be consitent with all the other KDE-PIM applications

BUG: 230140

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1123957